Fix large blank area in dark mode

--- a/themes/materialis/source/css/style.styl
+++ b/themes/materialis/source/css/style.styl
@@ -19,3 +19,11 @@ body
 @media screen and (min-width: var(--mdui-breakpoint-md))
     .sidebar-content
         open: true
+
+html, body
+  min-height: 100vh
+  background-color: rgb(var(--mdui-color-background))
+
+.main
+  min-height: calc(100vh - 120px)
+  background-color: rgb(var(--mdui-color-background))
